objects/Springboard_Pages__c.object
<CustomObject>
    <description>The many-to-many junction object to allow a springboard to appear on multiple app pages, or customer showcase pages</description>
    <fields>
        <fullName>App_Page__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>App Page</label>
        <referenceTo>Apppage__c</referenceTo>
        <relationshipLabel>Springboard Pages</relationshipLabel>
        <relationshipName>Springboard_Pages</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Showcase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Showcase</label>
        <referenceTo>Showcase__c</referenceTo>
        <relationshipLabel>Springboard Pages</relationshipLabel>
        <relationshipName>Springboard_Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Springboard__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Springboard</label>
        <referenceTo>Springboard__c</referenceTo>
        <relationshipLabel>Springboard Pages</relationshipLabel>
        <relationshipName>Springboard_Pages</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Springboard Pages</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SBP-{0000}</displayFormat>
        <label>Springboard Pages Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Springboard Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>